--- a/deployments/test.yaml
+++ b/deployments/test.yaml
@@ -14,9 +14,21 @@ spec:
       containers:
       - name: test-app
         image: aduka27/model:latest
+        command: ["tail", "-f", "/dev/null"]
         resources:
           limits:
             memory: "128Mi"
             cpu: "500m"
         ports:
         - containerPort: 80
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: python-svc
+spec:
+  selector:
+    app: python-service
+  ports:
+  - port: 80
