--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,4 +25,8 @@ jobs:
           docker push aduka27/model:$GIT_TAG
           docker push aduka27/model:latest
           sed -i 's/latest/$GIT_TAG/g deployment/test.yaml
-          git commit -am --allow-empty-message
+
+  - name: Commit & Push changes
+      uses: actions-js/push@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
