--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,9 +1,9 @@
 name: Docker Image CI
 
 on:
-  push:
-    branches: [ "main" ]
+
   pull_request:
+    types: [ "closed" ]
     branches: [ "main" ]
 
   workflow_dispatch: 
@@ -11,7 +11,7 @@ on:
 jobs:
 
   build:
-
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
